Bug 124327 - Calc. Wrong render of legend's font in Chart (OpenGL enabled)
Summary: Calc. Wrong render of legend's font in Chart (OpenGL enabled)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart-Legends VCL-OpenGL
  Show dependency treegraph
 
Reported: 2019-03-25 19:23 UTC by Roman Kuznetsov
Modified: 2019-04-12 17:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example chart (14.55 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-03-25 19:26 UTC, Roman Kuznetsov
Details
OpenGL enabled (71.12 KB, image/jpeg)
2019-03-25 19:27 UTC, Roman Kuznetsov
Details
OpenGL disabled (66.06 KB, image/jpeg)
2019-03-25 19:28 UTC, Roman Kuznetsov
Details
Can't reproduce, with OpenGL. (138.98 KB, image/png)
2019-04-03 10:59 UTC, Miklos Vajna
Details
Can't reproduce, without OpenGL. (138.36 KB, image/png)
2019-04-03 11:00 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-03-25 19:23:43 UTC
Description:
Calc. Wrong render of legend's font in Chart (OpenGL enabled)

Steps to Reproduce:
1. Open file from attach in LO 6.1 (make sure OpenGL is active)
2. See at legend
3. Legend's font is wrong render

Actual Results:
Legend's font is wrong render

Expected Results:
Legend's font is cool render


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Roman Kuznetsov 2019-03-25 19:26:25 UTC
it's regression in 6.1, I bisected it

$ git bisect bad 4be0c5ca7f2659e747b728c75387cb3c82b7dcf5 is the first bad commit
commit 4be0c5ca7f2659e747b728c75387cb3c82b7dcf5
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Oct 9 07:53:09 2018 -0700

    source 60011cefbccd91065dadf66896a688b807e76964

https://gerrit.libreoffice.org/#/c/61312/ - it's cherrypick from

https://gerrit.libreoffice.org/#/c/61219/

CC: Miklos and Xisco
Comment 2 Roman Kuznetsov 2019-03-25 19:26:49 UTC
Created attachment 150281 [details]
Example chart
Comment 3 Roman Kuznetsov 2019-03-25 19:27:51 UTC
Created attachment 150282 [details]
OpenGL enabled
Comment 4 Roman Kuznetsov 2019-03-25 19:28:18 UTC
Created attachment 150283 [details]
OpenGL disabled
Comment 5 Miklos Vajna 2019-04-03 10:59:10 UTC
Created attachment 150504 [details]
Can't reproduce, with OpenGL.
Comment 6 Miklos Vajna 2019-04-03 11:00:04 UTC
Created attachment 150505 [details]
Can't reproduce, without OpenGL.

I attach how it's visible here with and without OpenGL on master, Windows. I see no difference when it comes to the legend's font.
Comment 7 Roman Kuznetsov 2019-04-03 11:19:13 UTC
(In reply to Miklos Vajna from comment #5)
> Created attachment 150504 [details]
> Can't reproduce, with OpenGL.

Miklos, do you use Windows 7? Can you test it on Windows 10?
Comment 8 Miklos Vajna 2019-04-03 13:03:47 UTC
Yes, I tested on Windows 7. I only have Windows 10 in VM without GL, but perhaps somebody else can confirm this.
Comment 9 Xisco Faulí 2019-04-03 13:53:11 UTC
@Aron, do you reproduce this on your side ?
Comment 10 Mike Kaganski 2019-04-03 15:03:05 UTC
I can confirm with Windows 10 *with UI scaling set to 125%*.

Tested with Version: 6.2.3.1 (x64)
Build ID: 9ba025bafb03b962c34687cf87806cc03a3a7436
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 11 Roman Kuznetsov 2019-04-03 15:18:16 UTC
(In reply to Mike Kaganski from comment #10)
> I can confirm with Windows 10 *with UI scaling set to 125%*.
> 
> Tested with Version: 6.2.3.1 (x64)
> Build ID: 9ba025bafb03b962c34687cf87806cc03a3a7436
> CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
> Locale: ru-RU (ru_RU); UI-Language: en-US
> Calc: CL

I didn't know scaling of GUi in OS is important info
Comment 12 Miklos Vajna 2019-04-05 11:01:29 UTC
(In reply to Mike Kaganski from comment #10)
> I can confirm with Windows 10 *with UI scaling set to 125%*.

Thanks, 125% was the trick, not the Windows version.

I'll take a look at this, let's see if I get anywhere.
Comment 13 Commit Notification 2019-04-08 10:13:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7069ec6de9807d12ff9ad52ecbb66ea7dc373723%5E%21

tdf#124327 sc opengl: fix lack of AA text in charts

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2019-04-08 14:18:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/5bff92cfcb9cf97c742cc9fb4d85b79b082b941e%5E%21

tdf#124327 sc opengl: fix lack of AA text in charts

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Roman Kuznetsov 2019-04-12 17:16:53 UTC
verified in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 74288f5af28de3d14044c951e7e5d62bb2e22301
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-04-12_00:11:21
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

Thank you, Miklos